--- a/Lab05/Lab05.vcxproj.filters
+++ b/Lab05/Lab05.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp">
+    <ClCompile Include="63010871_Vachara.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
